--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@arcana/auth": "^1.0.1",
     "@arcana/auth-react": "^0.0.3",
     "axios": "^1.3.2",
-    "ethers": "^6.0.2",
+    "ethers": "^6.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "tailwind-scrollbar-hide": "^1.1.7"
